# cityhash-sys

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: Build.yml  CICD.yml  Clippy.yml  Test.yml
src/: cityhash_crc.rs  cityhash_portable.rs  hasher.rs  int128.rs  lib.rs  u128_low_high.rs
src/google/: city.cc  city.h  citycrc.h
tests/: hash_128.rs  hash_256.rs  hash_32.rs  hash_64.rs  hasher.rs  lipsum.rs
