[package]
name = "cityhash-sys"
version = "0.5.0"
authors = ["Julian LALU"]
edition = "2021"
license = "MIT"
description = "Rust binding of Google CityHash algorithm."
repository = "https://github.com/HUD-Software/cityhash-sys"  
keywords = ["google", "hash", "string", "gamedev"]
categories = ["algorithms", "external-ffi-bindings", "no-std"]

[build-dependencies]
cc = "1.0"

[package.metadata.docs.rs]
rustc-args = ["-Ctarget-feature=+sse4.2"]
rustdoc-args = ["-Ctarget-feature=+sse4.2"]